--- a/native_server/package.json
+++ b/native_server/package.json
@@ -2,16 +2,24 @@
   "name": "native_server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./server.js",
     "dev": "nodemon ./server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Leeonelorlando/cursoBackend/blob/main/native_server/server.js"
+  },
   "author": "",
   "license": "ISC",
-  "description": "",
+  "bugs": {
+    "url": "https://github.com/ignacioborraz/server-NODEJS/issues"
+  },
+  "homepage": "https://github.com/Leeonelorlando/cursoBackend",
   "dependencies": {
     "moment": "^2.29.4",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "express": "^4.18.2"
   }
 }
