--- a/package.json
+++ b/package.json
@@ -18,8 +18,15 @@
   },
   "homepage": "https://github.com/Leeonelorlando/cursoBackend#readme",
   "dependencies": {
+    "connect-mongo": "^5.0.0",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "express-session": "^1.17.3",
+    "mongoose": "^7.3.1",
+    "mongoose-paginate-v2": "^1.7.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1"
