--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 PORT = 8080
 LINK_MONGO = "mongodb+srv://leeonelorlando:leonel98@dbleo.srnpsqg.mongodb.net/"
+SECRET_COOKIE = "hola1234"
+SECRET_SESSION = "chau1234"
+
+GH_APP_ID = "356360"
+GH_CLIENT_ID = "Iv1.667d00c95b1cae0a"
+GH_CLIENT_SECRET = "a1f3c2125e9a080f75fd691c417f54d3f23a1844"
